<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/etCommand"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtCommand" 
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/btnCommand"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btnCommand" 
            android:layout_weight="20"
            />
        <ToggleButton android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnToggle"
            android:id="@+id/btnToggle"
            android:layout_weight="80"
            android:padding="10dp"
            />
</LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="30dp" 
            android:id="@+id/txtResult"
            android:gravity="center"
            android:text="@string/app_name"
            />
    

</LinearLayout>